--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="banner">
       <h1>Happy Birthday Idris!</h1>
-      <p>Wishing you a day filled with love, joy, and happiness!</p>
+      <p>Wishing you a day filled with love, joy and happiness!</p>
       <p id="todayDate"></p> <!-- Tanggal akan dimasukkan di sini -->
     </div>
     <button id="surpriseButton">Click for a Surprise!</button>
